# open_windsurf

./: .gitignore  README.md  open_windsurf.py  pyproject.toml
open_windsurf/: __init__.py  cli.py  core.py
tests/: __init__.py  test_cli.py  test_core.py
